Add Solana dependency and implement NFT purchase logic with token burning

--- a/LootBox/pom.xml
+++ b/LootBox/pom.xml
@@ -44,6 +44,11 @@
             <version>8.0.33</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mmorrell</groupId>
+            <artifactId>solanaj</artifactId>
+            <version>1.19.2</version>
+        </dependency>
     </dependencies>
 
     <build>
