--- a/Webserver/package.json
+++ b/Webserver/package.json
@@ -11,8 +11,9 @@
     "@solana/web3.js": "^1.87.6",
     "bs58": "^5.0.0",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "qrcode": "^1.5.3",
+    "serverless-http": "^3.2.0",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
